# genesis-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
docs/: changelog.md  lsp.md  macros.md  math.md  memory.md  reference.md
examples/: async_sleep.gl  async_test.gl  box_simple.gl  box_test.gl  break_continue.gl  channel_debug.gl  channel_minimal.gl  channel_simple.gl  channel_test.gl  closure.gl  closure_advanced.gl  closure_chain.gl  closure_nested.gl  closure_test.gl  combinators.gl  const_globals.gl  default_type_params.gl  dir_list_count.gl  dir_list_elements.gl  dir_list_full.gl  dir_list_minimal.gl  dir_list_noprint.gl  dir_list_only.gl  dir_list_simple.gl  dir_list_test.gl  eprint_test.gl  exhaustive_test.gl  fib.gl  file_test.gl  filesystem_test.gl  format_advanced.gl  format_test.gl  generic_fn.gl  generic_fn_simple.gl  generic_pair.gl  generic_simple.gl  generic_struct.gl  hashmap_test.gl  hashset_simple.gl  hashset_test.gl  (+61 more)
examples/external_mod_test/: main.gl  math.gl
examples/external_mod_test/utils/: mod.gl
src/: ast.rs  lexer.rs  lib.rs  macro_expand.rs  main.rs  parser.rs  span.rs  token.rs
src/ir/: builder.rs  instr.rs  llvm.rs  lower.rs  mod.rs  types.rs
src/lsp/: analysis.rs  backend.rs  document.rs  main.rs  utils.rs
src/memory/: drop.rs  escape.rs  mod.rs  rc.rs  region.rs
src/typeck/: check.rs  context.rs  error.rs  exhaustiveness.rs  infer.rs  mod.rs  monomorph.rs  ownership.rs  ty.rs  unify.rs  variance.rs
