[package]
name = "genesis-lang"
version = "0.1.0"
edition = "2021"
authors = ["Genesis OS Team"]
description = "The Genesis Programming Language Compiler"
license = "MIT"

[dependencies]
# Logging and diagnostics
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# String interning for performance
string-interner = "0.17"

# Utilities
logos = "0.14"       # Fast lexer generator

# LLVM bindings for code generation
inkwell = { version = "0.5", features = ["llvm18-0"] }

# LSP Server
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
ropey = "1.6"

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.34"       # Snapshot testing

[[bin]]
name = "glc"
path = "src/main.rs"

[[bin]]
name = "genesis-lsp"
path = "src/lsp/main.rs"

[lib]
name = "genesis"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
